--- a/base.html
+++ b/base.html
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-8 col-md-4">
+                    <div class="col-md-offset-8 col-md-4 col-xs-offset-8 col-xs-4">
                         <button type="submit" class="btn btn-info"> Continuar</button>
                     </div>
                 </div>
