--- a/base.html
+++ b/base.html
@@ -7,7 +7,7 @@
     <script src="js/jquery-3.1.0.min.js" type="text/javascript"></script>
     <script src="js/jquery-ui.js" type="text/javascript"></script>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <title>Ipedidos</title>
+    <title>Vendorama</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -20,12 +20,20 @@
     <script src="js/ipedidos.js" type="text/javascript"></script>
 </head>
 <body>
-<div class="row">
-    <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12" id="header">
-        <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid" id="header">
+    <ul class="nav navbar-nav icon-menu">
+        <li><h3><i class="fa fa-bars fa-lg" aria-hidden="true"></i></h3></li>
+    </ul>
+    <div class="navbar-header title-header">
         <h3>Vendorama</h3>
-        <div class="icon-more"><i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i></div>
     </div>
+    <ul class="nav navbar-nav icon-more">
+        <li><h3><i class="fa fa-ellipsis-v fa-lg" aria-hidden="true"></i></h3></li>
+    </ul>
+  </div>
+</nav>
+<div class="row nav-pills">
     <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12" id="breadcrumb">
         <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-4 menu-option">
