--- a/base.html
+++ b/base.html
@@ -32,25 +32,22 @@
         <li><h3><i class="fa fa-ellipsis-v fa-lg" aria-hidden="true"></i></h3></li>
     </ul>
   </div>
-</nav>
-<div class="row nav-pills">
-    <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12" id="breadcrumb">
-        <div class="row">
-            <div class="col-md-4 col-sm-4 col-xs-4 menu-option">
-                <p>Registrar</p>
-                <div class="selected" id="option_1"></div>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-4 menu-option">
-                <p>Registrados</p>
-                <div id="option_2"></div>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-4 menu-option">
-                <p>Solicitar produtos</p>
-                <div id="option_3"></div>
-            </div>
+    <div class="row" id="breadcrumb">
+        <div class="col-md-4 col-sm-4 col-xs-4 menu-option">
+            <p>Registrar</p>
+            <div class="selected" id="option_1"></div>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4 menu-option">
+            <p>Registrados</p>
+            <div id="option_2"></div>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4 menu-option">
+            <p>Solicitar produtos</p>
+            <div id="option_3"></div>
         </div>
     </div>
-</div>
+</nav>
+
 <div class="row">
     <div class="container-fluid">
         <div class="col-md-6 col-md-offset-3 formulario">
