--- a/header.html
+++ b/header.html
@@ -32,6 +32,20 @@
         <li><h3><i class="fa fa-ellipsis-v fa-lg" aria-hidden="true"></i></h3></li>
     </ul>
   </div>
+    <div class="row" id="breadcrumb">
+        <div class="col-md-4 col-sm-4 col-xs-4 menu-option">
+            <p>Registrar</p>
+            <div class="selected" id="option_1"></div>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4 menu-option">
+            <p>Registrados</p>
+            <div id="option_2"></div>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4 menu-option">
+            <p>Solicitar produtos</p>
+            <div id="option_3"></div>
+        </div>
+    </div>
 </nav>
 
 </body>
