--- a/base.html
+++ b/base.html
@@ -8,6 +8,7 @@
     <script src="js/jquery-ui.js" type="text/javascript"></script>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <title>Vendorama</title>
+    <link rel="icon" href="img/icon-vendorama.jpg">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -42,7 +43,7 @@
             <div id="option_2"></div>
         </div>
         <div class="col-md-4 col-sm-4 col-xs-4 menu-option">
-            <p>Solicitar produtos</p>
+            <p>Novos produtos</p>
             <div id="option_3"></div>
         </div>
     </div>
@@ -50,44 +51,8 @@
 
 <div class="row">
     <div class="container-fluid">
-        <div class="col-md-6 col-md-offset-3 formulario">
-            <form class="form-horizontal" method="post" accept-charset="utf-8">
-                <div class="form-group">
-                    <label for="inputCpf" class="col-md-2 control-label">CPF:</label>
-                    <div class="col-md-10">
-                        <input class="form-control" type="text" name="cpf" placeholder="cpf">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputCpf" class="col-md-2 control-label">Nome:</label>
-                    <div class="col-md-10">
-                        <input class="form-control" type="text" name="nome" placeholder="nome completo">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputCpf" class="col-md-2 control-label">Endereço:</label>
-                    <div class="col-md-10">
-                        <input class="form-control" type="text" name="endereço" placeholder="Endereço para entrega do produto">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputCpf" class="col-md-2 control-label">Telefone:</label>
-                    <div class="col-md-10">
-                        <input class="form-control" type="text" name="telefone" placeholder="Número para contato">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10 mensagem-form">
-                        <p><em>Ao adicionar o contato do cliente, o aplicativo registrará automaticamente o número
-                            em seu celular adicionando também as redes sociais que estão relacionadas a esse número.</em></p>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-8 col-md-4 col-xs-offset-8 col-xs-4">
-                        <button type="submit" class="btn btn-info"> Continuar</button>
-                    </div>
-                </div>
-            </form>
+        <div class="col-md-6 col-md-offset-3 article">
+
         </div>
     </div>
 </div>
