--- a/base.html
+++ b/base.html
@@ -35,15 +35,15 @@
   </div>
     <div class="row" id="breadcrumb">
         <div class="col-md-4 col-sm-4 col-xs-4 menu-option">
-            <p>Registrar</p>
+            <p>Home</p>
             <div class="selected" id="option_1"></div>
         </div>
         <div class="col-md-4 col-sm-4 col-xs-4 menu-option">
-            <p>Registrados</p>
+            <p>Ciclo</p>
             <div id="option_2"></div>
         </div>
         <div class="col-md-4 col-sm-4 col-xs-4 menu-option">
-            <p>Novos produtos</p>
+            <p>Clientes</p>
             <div id="option_3"></div>
         </div>
     </div>
