--- a/login.html
+++ b/login.html
@@ -19,6 +19,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/ipedidos.css">
+    <script src="js/jquery.mask.js" type="text/javascript"></script>
     <script src="js/ipedidos.js" type="text/javascript"></script>
 </head>
 <body>
@@ -39,7 +40,7 @@
                 <div class="col-md-6 col-md-offset-3">
                     <form>
                       <div class="form-group">
-                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                        <input type="email" class="form-control" id="InputEmail" placeholder="Email">
                       </div>
                       <div class="form-group">
                         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
